@@ -642,7 +642,7 @@ render_road_vert
 Render a road. This is really dumb right now, not using a texture
 ===============
 */
-static void render_road_horiz(Bitmap *dst, const Point& start, const Point& end, ushort color)
+static void render_road_horiz(Bitmap *dst, const Point& start, const Point& end, Bitmap* src )
 {
 	int dstw = dst->w;
 	int dsth = dst->h;
@@ -650,7 +650,7 @@ static void render_road_horiz(Bitmap *dst, const Point& start, const Point& end,
 	int ydiff = ((end.y - start.y) << 16) / (end.x - start.x);
 	int centery = start.y << 16;
 
-	for(int x = start.x; x < end.x; x++, centery += ydiff) {
+	for(int x = start.x, sx = 0; x < end.x; x++, centery += ydiff, sx ++) {
 		if (x < 0 || x >= dstw)
 			continue;
 
@@ -661,12 +661,12 @@ static void render_road_horiz(Bitmap *dst, const Point& start, const Point& end,
 				continue;
 
 	      ushort *pix = dst->pixels + y*dst->pitch + x;
-			*pix = color;
+			*pix = * (src->pixels + i*src->pitch + sx ) ;
 		}
 	}
 }
 
-static void render_road_vert(Bitmap *dst, const Point& start, const Point& end, ushort color)
+static void render_road_vert(Bitmap *dst, const Point& start, const Point& end, Bitmap* src)
 {
 	int dstw = dst->w;
 	int dsth = dst->h;
@@ -674,7 +674,7 @@ static void render_road_vert(Bitmap *dst, const Point& start, const Point& end, 
 	int xdiff = ((end.x - start.x) << 16) / (end.y - start.y);
 	int centerx = start.x << 16;
 
-	for(int y = start.y; y < end.y; y++, centerx += xdiff) {
+	for(int y = start.y, sy = 0; y < end.y; y++, centerx += xdiff, sy ++ ) {
 		if (y < 0 || y >= dsth)
 			continue;
 
@@ -685,7 +685,7 @@ static void render_road_vert(Bitmap *dst, const Point& start, const Point& end, 
 				continue;
 
 			ushort *pix = dst->pixels + y*dst->pitch + x;
-			*pix = color;
+			*pix = * (src->pixels + sy*src->pitch + i ) ;
 		}
 	}
 }
@@ -720,6 +720,8 @@ void Bitmap::draw_field(Field * const f, Field * const rf, Field * const fl, Fie
 //	render_r=false; // debug overwrite: just render b triangle
 //	render_b=false; // debug overwrite: just render r triangle
 
+   Road_Textures* rt = get_graphicimpl()->get_road_textures();
+
 	Texture* rtex = get_graphicimpl()->get_maptexture_data(f->get_terr()->get_texture());
 	if(render_r && rtex)
 		render_triangle(this, &r, &l, &br, rtex);
@@ -732,19 +734,17 @@ void Bitmap::draw_field(Field * const f, Field * const rf, Field * const fl, Fie
 	Texture* ttex = get_graphicimpl()->get_maptexture_data(ft->get_terd()->get_texture());
 
 	// Render roads and dither polygon edges
-	ushort color;
 	uchar road;
 
 	road = (roads >> Road_East) & Road_Mask;
 	if (render_r) {
-		if (road) {
-			switch (road) {
-				case Road_Normal: color = RGBColor(192, 192, 192).pack16(); break;
-				case Road_Busy:   color = RGBColor( 96,  96,  96).pack16(); break;
-				default:          color = RGBColor(  0,   0, 128).pack16(); break;
-			}
-			render_road_horiz(this, l, r, color);
-		}
+      if (road) {
+         switch(road) {
+            case Road_Normal: render_road_horiz(this, l, r, rt->bm_road_normal); break; 
+            case Road_Busy: render_road_horiz(this, l, r, rt->bm_road_busy); break;
+            default: assert(0); break; // never here
+         }
+      }
 		else if (rtex!=0 && ttex!=0 && rtex!=ttex)
 			dither_edge_horiz(this, l, r, rtex, ttex);
 	}
@@ -752,14 +752,13 @@ void Bitmap::draw_field(Field * const f, Field * const rf, Field * const fl, Fie
 	// FIXME: this will try to work on some undiscovered terrain
 	road = (roads >> Road_SouthEast) & Road_Mask;
 	if (render_r || render_b) {
-		if (road) {
-			switch (road) {
-				case Road_Normal: color = RGBColor(192, 192, 192).pack16(); break;
-				case Road_Busy:   color = RGBColor( 96,  96,  96).pack16(); break;
-				default:          color = RGBColor(  0,   0, 128).pack16(); break;
-			}
-			render_road_vert(this, l, br, color);
-		}
+      if (road) {
+         switch(road) {
+            case Road_Normal: render_road_vert(this, l, br, rt->bm_road_normal); break; 
+            case Road_Busy: render_road_vert(this, l, br, rt->bm_road_busy); break;
+            default: assert(0); break; // never here
+         }
+      }
 		else if (rtex!=0 && btex!=0 && rtex!=btex)
 			dither_edge_vert(this, l, br, rtex, btex);
 	}
@@ -767,13 +766,12 @@ void Bitmap::draw_field(Field * const f, Field * const rf, Field * const fl, Fie
 	road = (roads >> Road_SouthWest) & Road_Mask;
 	if (render_b) {
 		if (road) {
-			switch (road) {
-				case Road_Normal: color = RGBColor(192, 192, 192).pack16(); break;
-				case Road_Busy:   color = RGBColor( 96,  96,  96).pack16(); break;
-				default:          color = RGBColor(  0,   0, 128).pack16(); break;
-			}
-			render_road_vert(this, l, bl, color);
-		}
+         switch(road) {
+            case Road_Normal: render_road_vert(this, l, bl, rt->bm_road_normal); break; 
+            case Road_Busy: render_road_vert(this, l, bl, rt->bm_road_busy); break;
+            default: assert(0); break; // never here
+         }
+      }
 		else if (ltex!=0 && btex!=0 && ltex!=btex)
 			dither_edge_vert(this, l, bl, btex, ltex);
 	}
