@@ -159,14 +159,11 @@ public:
 
 
 /*
-struct GameIcons
-
-Contains the indices of a number of default icons that are accessed by
-rendermap()
-*/
-struct GameIcons {
-	uint	pics_roadb[3];	// green, yellow, red
-	uint	pics_build[5];	// flag, small, medium, big, mine (same order as Overlay_Build_*)
+ * This contains all the road textures needed to render roads
+ */
+struct Road_Textures {
+   Bitmap* bm_road_normal;
+   Bitmap* bm_road_busy;
 };
 
 /*
@@ -256,6 +253,9 @@ public:
 	virtual void animate_maptextures(uint time);
 	Texture* get_maptexture_data(uint id);
 
+   // Road textures
+   Road_Textures* get_road_textures( void );
+
 	// Animations
 	virtual void load_animations();
 	AnimationGfx* get_animation(uint anim);
@@ -296,7 +296,8 @@ private:
 	std::vector<Picture>	m_pictures;
 	picmap_t					m_picturemap; // hash of filename/picture ID pairs
 
-	std::vector<Texture*>		m_maptextures;
+   Road_Textures*       m_roadtextures;
+   std::vector<Texture*>		m_maptextures;
 	std::vector<AnimationGfx*>	m_animations;
 };
 
